# story-sprout

./: .env.example  .gitignore  .marimo.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  TODO.md  ai_generation_spec.md  coverage.xml  frontend.md  manage.py  mkdocs.yml  pyproject.toml  story-sprout.code-workspace  tailwind.config.js  test_celery_task.py  ui_specifications.md
.claude/: settings.local.json
.windsurf/rules/: coding-conventions.md  context7.md  django.md  frontend.md  not-being-a-shitty-programmer.md  python.md  uv-commands.md
.zed/: settings.json
apps/ai/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  signals.py  tasks.py  views.py  workflows.py
apps/core/: views.py
apps/dashboard/: admin.py  views.py
apps/landing/: views.py
apps/stories/: admin.py  api.py  forms.py  htmx_views.py  models.py  services.py  urls.py  urls_new.py  views.py
apps/subscriptions/: admin.py
core/: api.py  celery.py  settings.py  urls.py  utils.py
docs/: .nav.yml  .pages  TODO.md  ai_suggestions.md  ai_workflow_design.md  app_flowchart.md  autosave_analysis.md  frontend_guidelines_document.md  htmx_patterns.md  implementation_plan.md  index.md  mermaid-test.md  mkdocs.yml  prd.md  project_requirements_document.md  ruff-usage.md  security_guideline_document.md  ui_patterns.md  windsurf_file.md
docs/ai-features/: .pages
docs/architecture/: .nav.yml  .pages  ai_workflow_design.md  app_flow_document.md  app_flowchart.md  tech_stack_document.md
docs/brain/: .nav.yml  TODO.md  agent_integration_analysis.md  ai_app_reorganization.md  class_based_api_design.md  documentation_update_plan.md  mcp_implementation_plan.md  mcp_implementation_tasks.md  memory.md  page_image_gen.md  pydantic_ai_imageurl_bug.md  settings_refactor.md  story_agent_architecture_decision.md
docs/development/: .nav.yml  .pages  backend_structure_document.md  cursor_project_rules.md  frontend_guidelines_document.md  htmx_patterns.md  scaffolding.md
docs/getting-started/: .pages
docs/javascripts/: mathjax.js  mermaid.js
docs/llms/: .nav.yml  pydantic-ai-full.md  pydantic-ai.md
docs/security/: .pages
docs/stylesheets/: extra.css
libs/celery-typed/: README.md  pyproject.toml
libs/pydantic-ai-stash/: README.md  coverage.xml  pyproject.toml
libs/pydantic-ai-stash/src/pydantic_ai_stash/: __init__.py  adapters.py  core.py
libs/pydantic-ai-stash/tests/: conftest.py  test_adapters.py  test_binary_stash.py  test_content_formats.py  test_core.py  test_idempotency.py  test_integration.py  test_pickle_data.py
notebooks/: _setup.py  agent_01.py  agent_04_output.ipynb  agent_05_chat.ipynb  story_service.ipynb  web_setup.py
notebooks/.virtual_documents/: agent_01.ipynb  pickled_stashing.ipynb
scripts/: kill-celery.sh
services/docs_server/: mkdocs.yml  pyproject.toml
services/lab/: pyproject.toml
services/lab/apps/: agent_01.py  pydantic_agent.py
services/lab/apps/__marimo__/session/: agent_01.py.json  test_stash_integration.py.json  test_stash_reproduction.py.json
services/lab/notebooks/: agent_01.py  pydantic_agent.py  test.pkl  web_setup.py
services/lab/notebooks/results/: agent_result_20250912_174658.pkl
services/lab/old/: _setup.py  result_utils.py
services/mcp/: .env.example  README.md  pyproject.toml  server.py  test_server.py
services/web/: coverage.xml  manage.py  pyproject.toml
services/web/apps/accounts/: admin.py
services/web/apps/ai/: admin.py  api.py  apps.py  models.py  signals.py  tasks.py
services/web/apps/ai/migrations/: 0001_initial.py  0007_remove_aiworkflow_target_ct_remove_aiworkflow_user_and_more.py  0009_job_delete_airequest.py
services/web/apps/ai/prompt_templates/: _formatting_rules.md  _story_json.md  page_image.md  story_description.md  story_title.md
services/web/apps/common/: sse.py
services/web/apps/common/management/commands/: runworker.py
services/web/apps/dashboard/: models.py  urls.py  views.py
services/web/apps/dashboard/migrations/: 0001_initial.py
services/web/apps/landing/: admin.py
services/web/apps/stories/: apps.py  models.py  services.py  tests.py
services/web/apps/stories/migrations/: 0003_alter_page_options_page_page_number_alter_page_story_and_more.py  0005_alter_page_options_alter_story_options_and_more.py  0006_page_content_generating.py  0014_remove_page_content_draft_and_more.py
services/web/apps/subscriptions/: models.py  urls.py  views.py
services/web/core/: api.py  asgi.py  logging.py  settings.py
services/web/core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
services/web/mcp_service/: server.py
services/web/templates/: README.md
services/web/templates/account/: email_change.html  email_confirm.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
services/web/templates/cotton/ai/panel/: index.html
services/web/templates/cotton/ai/panel/content/: chip_row.html
services/web/templates/cotton/fields/: input.html
services/web/templates/cotton/head/: index.html
services/web/templates/cotton/htmx/: sse.html
services/web/templates/cotton/stories/page/: content.html  image_text.html
services/web/templates/dashboard/: profile.html
services/web/templates/landing/: landing_base.html  marketing_nav.html  pricing.html
services/web/templates/stories/: index.html
snapshots/: full-20250822-183053.json
src/config/: asgi.py  celery.py  dynamic_logging.py  urls.py  wsgi.py
static/css/: components.css  design-system.css
static/js/: image-upload.js
templates/: base.html
templates/account/: auth_base.html  delete.html  email_confirm.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_from_key.html  social_connections.html  verification_sent.html
templates/components/: editable_content.html  editable_field.html  head.html  tailwind_config.html  test_include.html
templates/cotton/: editable_field.html  story.html
templates/dashboard/: base.html  dashboard_base.html  home.html  profile.html  settings.html  (+1 more)
(+208 files in other folders)
