[project]
name = "story-sprout-suite"
version = "0.1.0"
description = "Mono for Story Sprout"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "services/web",
    "services/docs_server",
    "services/lab",
]


[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-django>=4.0.0",
    "pydantic-ai>=1.0.0",
]

[tool.ruff]
line-length = 119
fix = true
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
lint.pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-line-length = 79

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = [
    "services/web/tests"
]
# Exclude patterns for workspace-level discovery
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    ".venv",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
]
