[project]
name = "story-sprout-docs"
version = "0.2.0"
description = "MKDocs server for Story Sprout"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.18",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.setuptools]
packages = []
