[project]
name = "story-sprout-lab"
version = "0.2.0"
description = "Lab for Story Sprout"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.15.3",
    "python-lsp-server>=1.13.1",
    "story-sprout-web",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["web_setup"]
# packages = []

[tool.uv.sources]
celery-typed = { workspace = true }
story-sprout-web = { workspace = true }
