[project]
name = "story-sprout-lab"
version = "0.2.0"
description = "Lab for Story Sprout"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery-typed",
    "marimo[recommended]>=0.15.3",
    "pydantic-ai-stash",
    "python-lsp-server>=1.13.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["web_setup"]
# packages = []

[tool.uv.sources]
story-sprout-web = { workspace = true }
pydantic-ai-stash = { path = "../../../_libs/pydantic-ai-stash", editable = true }
celery-typed = { path = "../../../_libs/celery-typed", editable = true }
