[project]
name = "story-sprout-web"
version = "0.2.0"
description = "Django project for the web facing portion of Story Sprout"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "celery-typed",
    "cookiecutter>=2.6.0",
    "crispy-tailwind>=1.0.3",
    "daphne>=4.2.1",
    "django>=5.2.4",
    "django-allauth>=65.10.0",
    "django-browser-reload>=1.18.0",
    "django-celery-results>=2.6.0",
    "django-cotton>=2.1.3",
    "django-crispy-forms>=2.4",
    "django-eventstream>=5.3.2",
    "django-htmx>=1.23.2",
    "django-markdownx>=4.0.9",
    "django-ninja>=1.4.3",
    "django-ordered-model>=3.7.4",
    "django-render-block>=0.11",
    "django-tailwind>=4.2.0",
    "django-template-partials>=25.1",
    "fastmcp>=2.12.3",
    "flower>=2.0.1",
    "google-genai>=1.33.0",
    "gunicorn>=23.0.0",
    "litellm>=1.74.3",
    "mcp>=1.14.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "psycopg[binary]>=3.2.9",
    "pydantic-ai>=1.0.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "stripe>=12.3.0",
    "whitenoise[brotli]>=6.9.0",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.9.0",
]

[tool.ruff]
line-length = 119
fix = true
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
lint.pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-line-length = 79

[tool.uv.sources]
celery-typed = { workspace = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
    "-v",
]
